# jupyter-dockernels

./: .gitignore  .pdm.toml  LICENSE  README.md  pyproject.toml
dockernels/: README.md
dockernels/config/mirrors/cn/: cargo_config  debian_bullseye_config  pypi_config
dockernels/go-1.20/: Dockerfile
dockernels/go-1.20/gonb/: Dockerfile
dockernels/go-1.20/gophernote/: Dockerfile
dockernels/python-3.11/: Dockerfile
dockernels/python/3.11/ipython/: Dockerfile
dockernels/rust-1.68/: Dockerfile
dockernels/rust/1.69/evcxr/: Dockerfile
dockernels/rust/1.69/irust/: Dockerfile
